# tfc-tech

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure  main.cc
docs/: CodingConventions.md
docs/installation/: MPICH-installation.md
src/tfc/: CMakeLists.txt  CommandLineParameters.h  runtime.cc  runtime.h
src/tfc/command_line/: CommandLineController.cc  CommandLineController.h  CommandLineParameter.cc  CommandLineParameter.h
src/tfc/console/: Console.cc  Console.h
src/tfc/logger/: Log.cc  Log.h  LogStream.h  TerminalColor.cc  TerminalColor.h
src/tfc/lua/: lua.h
src/tfc/tools/: Primitive.cc  Primitive.h  Timer.cc  Timer.h  macro_utils.h  string_utils.cc  string_utils.h  template_utils.h
tests/: CMakeLists.txt
tests/src/: main.cc
tests/test_tools/: test_Primitive.cc  test_Primitive.lua
tools/cmake-macros/: lua_dependency.cmake  setup-bin-and-lib.cmake
